--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ authors = [
 ]
 description = "Very simple CouchDB client"
 requires-python = ">=3.8"
+dependencies = [
+    "requests"
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
