--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
   { name="Enzo PB", email="enzo.puiroux@mail.com" },
 ]
 description = "Very simple CouchDB client"
+readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "requests"
